--- a/css/table.css
+++ b/css/table.css
@@ -7,7 +7,8 @@
  #cyclephillydata {
   border-collapse: collapse;
   text-align: center;
-  width: 100%;
+  width: 90%;
+  font-size: 90%;
 }
 th {
     text-align: center;
